# governance-rag

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  PROJECT_ROADMAP.md  README.md  SPONSORS.md  pyproject.toml  requirements.txt  setup.sh
data_raw/: url_seeds.json.example
docs/academic/: ACADEMIC_INGESTION_POLICY.md  ACADEMIC_PERSONA_RETRIEVAL.md  ACADEMIC_PIPELINE_DESIGN.md  DOMAIN_TERMINOLOGY_IMPLEMENTATION.md  PERSONA_QUICK_REFERENCE.md  PERSONA_RETRIEVAL_CONFIG.md  PHD_ASSESSMENT_README.md  WORD_FREQUENCY_IMPLEMENTATION.md  WORD_FREQUENCY_QUICK_START.md
docs/git/: CODE_PARSER.md  RAG_CODE_FILTERS_QUICK_REF.md  REPOS_CONFIG_FORMAT.md
docs/ingest/: ADAPTIVE_CHUNKING.md  ADDRESSING_CONTEXT_LOSS_IN_SEMANTIC_CHUNKING.md  BM25_INGESTION_INDEXING.md  CHUNK_VALIDATION_HEURISTIC.md  DRY_RUN_PREVIEW.md  HTML_PDF_CLEANING.md  LLM_CACHE.md  LOGGER_CONSOLIDATION.md  PROFILE_MODE.md  RAG_DATA_STRUCTURE.md  RATE_LIMITING_QUICK_REFERENCE.md  RETRY_IMPLEMENTATION.md  SEMANTIC_DRIFT.md
docs/monitoring/: RESOURCE_MONITORING.md  RESOURCE_MONITORING_IMPLEMENTATION.md  RESOURCE_MONITORING_QUICK_START.md
docs/search/: PHASE5_RERANKER.md  RAG_ANSWER_GENERATION_QUICK_REF.md  RAG_QUERY_ASSISTANT.md  RAG_QUERY_QUICK_START.md  RAG_QUICK_REFERENCE.md
examples/: README.md
examples/academic/: benchmark_title_join.py  candidate_terms_cli.py  check_academic_metadata.py  compare_databases.py  compare_reference_extraction.py  comprehensive_providers_example.py  debug_academic_retrieval.py  diagnose_citation_matching.py  dump_pdf_text.py  extract_citations_direct.py  validate_academic_references.py
examples/git/: bitbucket_code_ingestion.py  bitbucket_dated_example.py  camel_parser_demo.py  check_chromadb_metadata.py  check_groovy_metadata.py  code_analysis_example.py  dependency_audit.py  diagnose_bitbucket_access.py  list_bitbucket_projects.py  repos_config_example.json
examples/manual-verification/: check_collections.py  migrate_chromadb_to_sqlite.py  quick_chunk_check.py  rebuild_bm25_from_chroma.py  resource_monitoring_example.py  test_dependencies_tab.py  test_extended_metrics.py  verify_advanced_features.py  verify_advanced_features_2.py
examples/rag/: check_bm25_index.py  test_keyword_fallback.py
notebooks/: academic_reference_staleness_check.ipynb  cache_inspector.ipynb  chromadb_health.ipynb  chromadb_health_check.ipynb  chromadb_parent_child_health_check.ipynb  chunk_quality_tuning_advisor.ipynb  graph_status_check.ipynb  ingestion_report.ipynb  resource_utilisation_analysis.ipynb  retry_analysis.ipynb  retry_metrics.ipynb
rag_data/domain_terms/: aboriginal_torres_strait_islander.json  candidate_terms.json  cloud_infrastructure.json  cybersecurity.json  finance.json  healthcare.json  legal.json
scripts/: __init__.py
scripts/consistency_graph/: __init__.py  advanced_analytics.py  build_consistency_graph.py  consistency_config.py  graph_cache_manager.py  graph_filter.py  sqlite_schema.py  sqlite_store.py  sqlite_writer.py
scripts/ingest/: __init__.py  bm25_indexing.py  cache_db.py  chromadb_sqlite.py  chunk.py  embedding_cache.py  htmlparser.py  ingest.py  ingest_academic.py  ingest_config.py  ingest_git.py  ingest_utils.py  llm_cache.py  pdfparser.py  preprocess.py  vectors.py  word_frequency.py
scripts/rag/: __init__.py  adaptive_weighting.py  assemble.py  benchmark_manager.py  context_cache.py  (+12 more)
tests/: conftest.py  conftest_academic_models.py  test.json  test_academic_citation_graph.py  test_academic_models.py  test_academic_references.py  test_academic_structure_metadata.py  test_academic_terminology_extraction.py  test_adaptive_chunking.py  test_adaptive_weighting.py  test_additional_providers.py  test_advanced_analytics.py  test_assemble.py  test_auto_tuning_integration.py  test_bitbucket_code_ingestion.py  test_bm25_cache_isolation.py  test_bm25_indexing.py  test_bm25_ingestion_indexing.py  test_bm25_retrieval_integration.py  test_build_consistency_graph.py  test_cache.py  test_camel_parser.py  test_chromadb_path_consistency.py  test_chromadb_sqlite.py  test_chunk.py  test_chunk_heuristic.py  test_chunk_metadata.py  test_citation_confidence.py  test_clear_databases.py  test_code_metadata_preservation.py  test_code_parser.py  test_code_parser_camel.py  test_context_cache.py  test_counts_service.py  test_counts_service_parent.py  test_crossref_provider.py  test_dashboard.py  test_dlp_false_positive_reduction.py  test_domain_terms.py  test_downloader.py  (+65 more)
(+73 files in other folders)
