[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "governance-intelligence-console"
version = "0.1.0"
description = "Interactive analysis platform for governance documentation with version-aware consistency graphs and risk analysis"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "Andy", email = "andy.arch11@gmail.com"}
]
sponsors = [
    {name = "SC3", url = "https://sc3.com.au"}
]
keywords = [
    "rag",
    "governance",
    "documentation",
    "chromadb",
    "llm",
    "consistency",
    "risk-analysis"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # ChromaDB vector database
    "chromadb>=0.4.0",
    # LangChain and Ollama integration
    "langchain-ollama>=0.1.0",
    "langchain-text-splitters>=0.2.0",
    # Web scraping and parsing
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "pypdf>=4.0.0",
    "chardet>=5.0.0",
    # Data processing and analysis
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    # Pydantic for validation
    "pydantic>=2.0.0",
    # System metrics monitoring
    "psutil>=5.9.0",
    # Network graph analysis
    "networkx>=3.1",
    # Natural language processing
    "nltk>=3.8.0",
    "sentence-transformers>=3.0.0",
    # Progress bars
    "tqdm>=4.66.0",
    # Environment variable management
    "python-dotenv>=1.0.0",
    # Dashboard and visualisation
    "dash>=4.0.0",
    "plotly>=5.17.0",
    "matplotlib>=3.7.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    # Code quality and formatting
    "black>=23.0.0",
    "isort>=5.12.0",
    "pylint>=3.0.0",
    "mypy>=1.7.0",
    # Jupyter notebooks
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]

[project.scripts]
rag-ingest = "scripts.ingest.ingest:main"
rag-query = "scripts.rag.query:main"
rag-graph = "scripts.consistency_graph.build_consistency_graph:main"
rag-dashboard = "scripts.consistency_graph.dashboard:main"

[tool.setuptools]
packages = ["scripts", "scripts.ingest", "scripts.rag", "scripts.consistency_graph", "scripts.utils"]

[tool.setuptools.package-data]
scripts = ["*.json", "*.yaml", "*.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "asyncio: marks tests as async (deselect with '-m \"not asyncio\"')",
]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
source = ["scripts"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\(.*Protocol.*\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0103",  # Invalid name
    "C0114",  # Missing module docstring
    "R0913",  # Too many arguments
    "R0914",  # Too many local variables
]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
ignore_missing_imports = true
exclude = [
    ".venv",
    "venv",
    ".git",
    "__pycache__",
]

[[tool.mypy.overrides]]
module = [
    "scripts.ingest.ingest",
    "scripts.consistency_graph.build_consistency_graph",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
